changes on empty container

--- a/src/partials/library-section-films.html
+++ b/src/partials/library-section-films.html
@@ -3,12 +3,12 @@
     <div class="library-empty">
       <h2 class="library-empty__title">
         <span data-lang="movies-list-library-1"
-          >Here will be your list of movies. You can fill them</span
+          >Here will be your list of movies. You can fill them on</span
         >
         <a href="/src/index.html" class="library-empty__link">
-          <span data-lang="movies-list-library-2">HOME</span>
+          <span data-lang="movies-list-library-2">home</span>
         </a>
-        <span data-lang="movies-list-library-3">page</span>
+        <span data-lang="movies-list-library-3"> page</span>
       </h2>
       <img
         class="library-empty__img"
